<resources>

    <string name="app_name">MoviesApp</string>
    <string name="overView">"lorem ipsum"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen_video">FullscreenVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="tab_layout">TabLayout</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="my_list">My List</string>
    <string name="my_list_remove">My List</string>
    <string name="rate">Rate</string>
    <string name="more">More</string>
    <string name="night_mode">Night Mode</string>
    <string name="cast_and_crew">Cast And Crew</string>
    <string name="director">Director</string>
    <string name="sign_up"><![CDATA[Sign up >]]></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log in</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_login">Sign Up</string>
    <string name="enter_email_sign_up">Enter email</string>
    <string name="enter_password_sing_up">Enter password</string>
    <string name="sign_up_button_sign_up">Sign Up</string>
    <string name="add_to_my_list">Add to My List</string>
    <string name="remove_from_my_list">Remove from My List</string>
    <string name="now_playing_home">Now Playing</string>
    <string name="popular_home">Popular</string>
    <string name="upcoming_home">Upcoming</string>
    <string name="top_rated_home">Top Rated</string>
    <string name="my_list_home">My List</string>
    <string name="trending_now_home">Trending Now</string>
    <string name="recommendations_for_you_home">Recommendations for You</string>
    <string name="choose">Choose</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="my_list_my_list">My List</string>
    <string name="upcoming_movies_new_and_hot">Upcoming Movies</string>
    <string name="upcoming_tvs_new_and_hot">Upcoming Tvs</string>
    <string name="remind_me_new_and_hot_button">Remind Me</string>
    <string name="info_new_and_hot_button">Info</string>
    <string name="airing_today_tv">Airing Today</string>
    <string name="on_the_air_tv">On The Air</string>
    <string name="popular_tv">Popular</string>
    <string name="top_rated_tv">Top Rated</string>
    <string name="recommendations_for_you_tv">Recommendations for You</string>
    <string name="trending_now_tv">Trending Now</string>
    <string name="my_list_tv_button">My List</string>
    <string name="my_list_tv_remove">My List</string>
    <string name="info_tv_button">Info</string>
    <string name="play_tv_button">Trailer</string>
    <string name="movies_bottom_sheet">Movies</string>
    <string name="tv_shows_bottom_sheet">TV Shows</string>
    <string name="new_38_hot_bottom_sheet"><![CDATA[New & Hot]]></string>
    <string name="my_list_bottom_sheet">My List</string>
    <string name="top_results_search">Top Results</string>
    <string name="sci_fi_fantasy"><![CDATA[Sci-Fi & Fantasy]]></string>
    <string name="tv_comedies">TV Comedies</string>
    <string name="soap_tv_shows">Soap TV Shows</string>
    <string name="action_adventure"><![CDATA[Action & Adventure]]></string>
    <string name="western">Western</string>
    <string name="animation">Animation</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="for_kids">For Kids</string>
    <string name="mystery">Mystery</string>
    <string name="based_on_reality">Based on Reality</string>
    <string name="talk_shows">Talk Shows</string>
    <string name="war_politics"><![CDATA[War & Politics]]></string>
    <string name="action_movies">Action Movies</string>
    <string name="ready_to_adventure">Ready to Adventure</string>
    <string name="western_movies">Western Movies</string>
    <string name="war">War</string>
    <string name="released_on_tv">Released on TV</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="love">Love</string>
    <string name="mysteries">Mysteries</string>
    <string name="horror_movies">Horror Movies</string>
    <string name="history">History</string>
    <string name="fantasies">Fantasies</string>
    <string name="family_movies">Family</string>
    <string name="best_dramas">Best Dramas</string>
    <string name="documentaries">Documentaries</string>
    <string name="thriller_movies">Thriller Movies</string>
    <string name="comedies_movie">Comedies</string>
    <string name="animation_movies">Animation Movies</string>
    <string name="about" />

</resources>