<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailContainer"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_bg"
        tools:context=".activity.DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/page_bg"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="2dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetail" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDuration="@android:integer/config_longAnimTime"
            android:indeterminateDrawable="@drawable/progress_bar_bg"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewDetail"
            app:layout_constraintEnd_toEndOf="@+id/imageViewDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarDetail" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDetail">

            <TextView
                android:id="@+id/textViewDetailName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="2dp"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDetailDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:gravity="start"
                    android:layout_marginEnd="16dp"
                    android:textColor="#DEFFFFFF" />

                <TextView
                    android:id="@+id/textViewDetailAdult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_adult_bg"
                    android:gravity="center"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="#A6FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDetailRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginEnd="8dp"
                    android:textColor="#A6FFFFFF" />

                <TextView
                    android:id="@+id/textViewDetailVoteAvrange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_adult_bg"
                    android:gravity="center"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="#A6FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#A6FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/watchTrailer"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:paddingTop="12dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingBottom="12dp"
                    android:text="@string/watch_trailer"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:icon="@drawable/baseline_play_arrow_24"
                    app:iconGravity="textStart" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/detailRateTheMovie"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <LinearLayout
                            android:id="@+id/detailAddToMyList"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:foreground="?selectableItemBackground"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:src="@drawable/baseline_add_24" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:paddingStart="10dp"
                                android:text="@string/my_list"
                                android:textColor="#DEFFFFFF"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/detailRemoveFromMyList"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:foreground="?selectableItemBackground"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:src="@drawable/baseline_check_24" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:paddingStart="10dp"
                                android:text="@string/my_list_remove"
                                android:textColor="#DEFFFFFF"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/detailRateTheMovie"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?selectableItemBackground"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/detailMoreVert"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:src="@drawable/ic_baseline_star_rate_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:text="@string/rate"
                            android:textColor="#DEFFFFFF"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/detailMoreVert"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?selectableItemBackground"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/detailRateTheMovie"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:src="@drawable/baseline_more_vert_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/more"
                            android:textColor="#DEFFFFFF"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/textViewDetailOverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:textColor="#EBFFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textviewDetailGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:text=""
                android:textColor="#DEFFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/detailTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/page_bg"
            android:contentDescription="Related"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:tabIndicatorColor="@color/white"
            app:tabSelectedTextColor="@color/white"
            tools:ignore="MissingConstraints">

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailTabLayout">


        </androidx.viewpager2.widget.ViewPager2>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/home_image_slider_bg"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

